<resources>
    <string name="app_name">통합 병력 지원 시스템</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="id">아이디</string>
    <string name="edt_hint_id">아이디를 입력하세요.</string>
    <string name="pw">패스워드</string>
    <string name="edt_hint_pw">패스워드를 입력하세요.</string>
    <string name="pw_re">패스워드(re)</string>
    <string name="edt_hint_pw_re">패스워드를 다시 입력해주세요.</string>
    <string name="keycode">키코드</string>
    <string name="edt_hint_keycode"> 발급 받은 키코드를 입력하세요.</string>
    <string name="nickname">닉네임</string>
    <string name="edt_hint_nickname"> 닉네임을 입력하세요.</string>

    <!-- NavigationView 메뉴 이름-->
    <string name="title_activity_mypage">내정보</string>
    <string name="title_activity_getout">출타정보</string>
    <string name="title_activity_community">커뮤니티</string>
</resources>
