<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_keycode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:text="@string/keycode"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/edt_keycode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_weight="2"/>

    <EditText
        android:id="@+id/edt_keycode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/edt_hint_keycode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_keycode"
        app:layout_constraintBottom_toBottomOf="@id/tv_keycode"
        app:layout_constraintHorizontal_weight="8"/>

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:text="@string/id"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/edt_keycode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_keycode"
        app:layout_constraintHorizontal_weight="2"/>

    <EditText
        android:id="@+id/edt_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/edt_hint_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_id"
        app:layout_constraintBottom_toBottomOf="@id/tv_id"
        app:layout_constraintHorizontal_weight="8"/>

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:text="@string/pw"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/edt_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintHorizontal_weight="2"/>

    <EditText
        android:id="@+id/edt_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/edt_hint_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_pw"
        app:layout_constraintBottom_toBottomOf="@id/tv_pw"
        app:layout_constraintHorizontal_weight="8"/>

    <TextView
        android:id="@+id/tv_pw_re"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:text="@string/pw_re"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/edt_pw_re"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pw"
        app:layout_constraintHorizontal_weight="2"/>

    <EditText
        android:id="@+id/edt_pw_re"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/edt_hint_pw_re"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_pw_re"
        app:layout_constraintBottom_toBottomOf="@id/tv_pw_re"
        app:layout_constraintHorizontal_weight="8"/>

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:text="@string/nickname"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/edt_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pw_re"
        app:layout_constraintHorizontal_weight="2"/>

    <EditText
        android:id="@+id/edt_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/edt_hint_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_nickname"
        app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
        app:layout_constraintHorizontal_weight="8"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_signup_signup"
        android:text="@string/signup"
        android:textColor="@color/colorSignUpText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>